QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Simple support for the "net" backend (aka netjack) has sneaked in.

- Only one application instance is now allowed to be up and running,
  with immediate but graceful termination upon startup iif an already
  running instance is detected, which will see its main widget shown
  up automatically (EXPERIMENTAL, Qt/X11 platform only).

- Finally, full JACK MIDI support sneaks into the patchbay; socket
  types now differ in Audio, MIDI and ALSA, following the very same
  nomenclature as found on the Connections widget tabs.

- Sun driver support (by Jacob Meuser).

- Delay window positioning at startup option is now being disabled,
  on the Setup/Misc tab, when Minimize to system tray is enabled.

- Cosmetic fix: Setup/Settings tab, 'Input Device' text label was
  using a slightly smaller font than the rest of the application
  (bug#1872545, reported by Jouni Rinne).


0.3.2  2007-12-20  Patchbay heads-up with season greetings.

- Patchbay port matching has been slightly extended, this time
  allowing for the multiple or as many-to-many connections between
  socket plugs, provided these are specified in proper regex form
  (after a patch proposed by Dave Moore, thanks).

- A new option to start the program minimized when the system tray
  icon is enabled, is now available from Setup/Misc/Start minimized
  to system tray (as kindly suggested by Marc-Olivier Barre).

- Regression from QSystemTrayIcon (Qt4 >= 4.2) implementation, at
  least on X11 environments: while the main application widget was
  minimized to the system-tray, closing any other top-level widget
  was causing the immediate and unexpected application shutdown.

- Some portaudio backend settings are now being enabled, specially
  suited for the jackdmp flavouring.

- Server mode display blinking, usually shown as the RT indicator,